--- a/app/globals.css
+++ b/app/globals.css
@@ -2,24 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  /* background-color: black; */
-}
+
 .hoverText {
   transition:
     0.35s font-weight,
-    0.35s color;
-    /* height: auto; */
+    0.35s color,
+    0.35 sline-height 
+    ;
 }
 
 .hoverText:hover {
-  font-weight: 900;
+  font-weight: 600;
+  transform: rotateY('10deg');
+  font-size: 100px;
+  line-height: 10px;
   color: rgb(255, 140, 123);
 }
 
 /* To the right */
 .hoverText:hover + .hoverText {
-  font-weight: 500;
+  /* font-weight: 500; */
   color: rgb(255, 140, 123);
 }
 
@@ -29,7 +31,7 @@ body{
 
 /* To the left */
 .hoverText:has(+ .hoverText:hover) {
-  font-weight: 500;
+  /* font-weight: 500; */
   color: rgb(253, 182, 149);
 }
 
